[package]
name = "chess-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34.1"
resvg = "0.47.0"
shakmaty = "0.30.0"
tiny-skia = "0.12.0"
usvg = "0.47.0"

[profile.release]
opt-level = 3
lto = true
strip = true
